deployment/kibana/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: dash-ecomm
spec:
  replicas: 1
  selector:
    matchLabels:
      component: kibana
      type: dash-ecomm
  template:
    metadata:
      labels:
        component: kibana
        type: dash-ecomm
    spec:
      containers:
      - image: docker.elastic.co/kibana/kibana:7.12.0
        imagePullPolicy: Always
        name: dash-ecomm-kibana
        ports:
        - containerPort: 5601
        resources:
          requests:
            cpu: 0.2
            memory: 100Mi
      restartPolicy: Always
