deployment/kibana/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: dash-ecomm
  name: kibana
spec:
  ports:
    - name: kibana-port
      port: 5601
      targetPort: 5601
  selector:
    component: kibana
  type: ClusterIP
